tests/slice_bad_negative_index.stderr
tests/slice_bad_negative_index.sl:4:11: error: SL2004: type mismatch
