tests/slice_bad_negative_index.sl
// Verifies slice bad negative index.
fn main() i32 {
	var a [i32 4]
	return a[-1]
}
